[package]
name = "todo-iced-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }

[dependencies.iced]
version = "0.14"

# On wasm32 we need the webgl renderer (wgpu's default WebGPU backend
# isn't universally available yet) and sqlite-wasm-rs for OPFS.
[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.14", features = ["webgl"] }
sqlite-wasm-rs = "0.5"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
